--- a/publish/.htaccess
+++ b/publish/.htaccess
@@ -305,11 +305,11 @@ FileETag None
 # Option 1:
 # Rewrite "www.domain.com -> domain.com" 
 
-<IfModule mod_rewrite.c>
-  RewriteCond %{HTTPS} !=on
-  RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-  RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
-</IfModule>
+#<IfModule mod_rewrite.c>
+#  RewriteCond %{HTTPS} !=on
+#  RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+#  RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+#</IfModule>
 
 # ----------------------------------------------------------------------
 
